@@ -1,3 +1,6 @@
+2007-06-25 Changed default to clip=False in colors.Normalize;
+           modified ColorbarBase for easier colormap display - EF
+
 2007-06-13 Added maskedarray option to rc, numerix - EF
 
 2007-06-11 Python 2.5 compatibility fix for mlab.py - EF
